# GD32H759

./: .gitignore  README.md
cmake/: gcc-arm-none-eabi.cmake
cmake/firmware/: CMakeLists.txt
doc/: GD32H759 BSP架构设计.md  GD32H759 Bootloader与APP方案设计.md  GD32H759引脚与外部电路映射表.md
firmware/CMSIS/GD/GD32H73x_75x/Source/: system_gd32h73x_75x.c
firmware/CMSIS/GD/GD32H73x_75x/Source/ARM/: startup_gd32h73x_75x.s
firmware/CMSIS/GD/GD32H73x_75x/Source/GCC/: startup_gd32h73x_75x.S
firmware/GD32H73x_75x_standard_peripheral/Source/: gd32h73x_75x_fmc.c
firmware/GD32H73x_75x_usbhs_library/device/core/Include/: usbd_core.h  usbd_enum.h  usbd_transc.h
firmware/GD32H73x_75x_usbhs_library/device/core/Source/: usbd_core.c  usbd_enum.c  usbd_transc.c
firmware/GD32H73x_75x_usbhs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
firmware/GD32H73x_75x_usbhs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
firmware/GD32H73x_75x_usbhs_library/host/core/Include/: usbh_core.h  usbh_enum.h  usbh_pipe.h  usbh_transc.h
firmware/GD32H73x_75x_usbhs_library/host/core/Source/: usbh_core.c  usbh_enum.c  usbh_pipe.c  usbh_transc.c
firmware/GD32H73x_75x_usbhs_library/ustd/class/cdc/: usb_cdc.h
firmware/GD32H73x_75x_usbhs_library/ustd/class/hid/: usb_hid.h
firmware/GD32H73x_75x_usbhs_library/ustd/class/msc/: msc_bbb.h  msc_scsi.h  usb_msc.h
firmware/GD32H73x_75x_usbhs_library/ustd/common/: usb_ch9_std.h
(+43 files in other folders)
